<resources>
    <string name="app_name">File Manager</string>

    <string name="title_activity_main">Home</string>
    <string name="title_activity_announcement">Announcement</string>
    <string name="title_activity_files">Files</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_file_content">File Detail</string>
    <string name="title_activity_announcement_content">Announcement Detail</string>
    <string name="title_activity_searchable">Search Result</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_announcements">Announcements</string>
    <string name="navigation_drawer_files">Files</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_logout">logout</string>

    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort">Sort by</string>
    <string name="action_done">Done</string>

    <string name="search_hint">Search files</string>
    <string name="no_results">No files found for \"%s\"</string>
    <plurals name="search_results">
        <item quantity="one">Found %1$d file for \"%2$s\": </item>
        <item quantity="other">Found %1$d files for \"%2$s\": </item>
    </plurals>
    <string name="search_hint_dismiss">Dismiss</string>

    <string name="card_btn_more_announcement">More</string>
    <string name="card_btn_more_files">More</string>
    <string name="card_btn_announcement">Announcements</string>
    <string name="card_btn_files">Files</string>
    <string name="card_no_notifications">No Notifications now.</string>
    <string name="card_file_summary">Summary</string>
    <string name="card_file_pass">Pass</string>
    <string name="card_file_auditing">Auditing</string>
    <string name="card_file_pending">Pending</string>

    <string name="alert_dialog_file_sort_title">Sort By</string>
    <string name="alert_dialog_file_sort_positive">OK</string>
    <string name="alert_dialog_file_sort_negative">Cancel</string>
    <string-array name="file_sort_type">
        <item>Title</item>
        <item>Author</item>
        <item>State</item>
        <item>Time</item>
    </string-array>
    <string name="alert_dialog_upload_confirm_title">Upload</string>
    <string name="alert_dialog_upload_confirm_message">Confirm?</string>
    <string name="alert_dialog_upload_confirm_positive">Yes</string>
    <string name="alert_dialog_upload_confirm_negative">No</string>

    <!-- Strings used for examples -->
    <string name="example_name">John Smith</string>
    <string name="example_identity">Chief</string>
    <string name="example_category_pass">Pass</string>
    <string name="example_category_auditing">Auditing</string>
    <string name="example_category_pending">Pending</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_new_file">NewFileActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>

</resources>
