<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/navigation_drawer_home" />
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/ic_menu_announcement"
            android:title="@string/navigation_drawer_announcements" />
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_menu_file"
            android:title="@string/navigation_drawer_files" />
    </group>

    <group
        android:id="@+id/nav_group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/navigation_drawer_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/navigation_drawer_logout" />
    </group>

</menu>
