<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_announcement_normal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/card_file_summary"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorAccent"/>

        <RelativeLayout
            android:id="@+id/card_file_summary_state_one"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/card_file_summary_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:src="@drawable/ic_menu_file"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/card_file_summary_one"
                android:layout_toRightOf="@+id/card_file_summary_one"
                android:text="@string/card_file_pass"
                android:textAppearance="?android:attr/textAppearanceListItem"/>

            <TextView
                android:id="@+id/count_state_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAppearance="?android:attr/textAppearanceListItem"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="?android:attr/listDivider"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card_file_summary_state_two"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/card_file_summary_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:src="@drawable/ic_menu_file"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/card_file_summary_two"
                android:layout_toRightOf="@+id/card_file_summary_two"
                android:text="@string/card_file_auditing"
                android:textAppearance="?android:attr/textAppearanceListItem"/>

            <TextView
                android:id="@+id/count_state_auditing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAppearance="?android:attr/textAppearanceListItem"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="?android:attr/listDivider"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card_file_summary_state_three"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/card_file_summary_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:src="@drawable/ic_menu_file"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/card_file_summary_three"
                android:layout_toRightOf="@+id/card_file_summary_three"
                android:text="@string/card_file_pending"
                android:textAppearance="?android:attr/textAppearanceListItem"/>

            <TextView
                android:id="@+id/count_state_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAppearance="?android:attr/textAppearanceListItem"/>
        </RelativeLayout>

        <Button
            android:id="@+id/card_file_summary_btn_more"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_btn_more_files"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</android.support.v7.widget.CardView>